--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
-    <h2 class="alert alert-success">Bootstrap??</h2>
+    <div class="col-md-12">
+      <app-shopping-list></app-shopping-list>
+      <app-recipe-list></app-recipe-list>
+    </div>
   </div>
 </div>
