--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,49 @@
-<p>header works!</p>
+<!--<nav class="navbar navbar-expand-lg">-->
+<!--  <div class="container-fluid">-->
+<!--    <div class="navbar-header">-->
+<!--      <a href="#" class="navbar-brand">Recipe Book</a>-->
+<!--    </div>-->
+<!--    <div class="navbar-collapse">-->
+<!--      <ul class="nav navbar-nav">-->
+<!--        <li><a href="#">Recipes</a></li>-->
+<!--        <li><a href="#">Shopping List</a></li>-->
+<!--      </ul>-->
+<!--      <ul class="nav navbar-nav navbar-right">-->
+<!--        <li class="dropdown">-->
+<!--          <a href="#" class="dropdown-toggle">Manage</a>-->
+<!--          <ul class="dropdown-menu">-->
+<!--            <li><a href="#">Save Data</a></li>-->
+<!--            <li><a href="#">Fetch Data</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</nav>-->
+<nav class="navbar navbar-expand-sm bg-light">
+
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand">Recipe Book</a>
+    </div>
+    <div class="collapse navbar-collapse d-flex">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shopping List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Recipe Book</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" role="button">Manage</a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Save Data</a></li>
+            <li><a href="#">Fetch Data</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
