--- a/src/app/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,9 @@
-<p>recipe-item works!</p>
+<a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
+  <div class="float-start">
+    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+    <p class="list-group-item-text">{{ recipe.description }}</p>
+  </div>
+  <span class="float-end">
+    <img src="{{ recipe.imagePath }}" alt="" class="img-fluid" style="max-height: 50px;">
+  </span>
+</a>
