--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,6 +1,14 @@
 <div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-primary">New Recipe</button>
+  </div>
+</div>
+<hr />
+<div class="row">
 	<div class="col-md-5">
-    <app-recipe-item></app-recipe-item>
+    <div class="col-xs-12">
+      <app-recipe-item></app-recipe-item>
+    </div>
   </div>
   <div class="col-md-7">
     <app-recipe-detail></app-recipe-detail>
