create structure for recipe-details, clean up tree structure (ingredient is model not component)

--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,32 @@
-<p>recipe-detail works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-fluid"/>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>Name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe</button>
+      <ul class="dropdown-menu">
+        <li><a hre="#">Add to shopping list</a></li>
+        <li><a hre="#">Edit Recipe</a></li>
+        <li><a hre="#">Delete Recipe</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <p>Description</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <p>Ingredients</p>
+  </div>
+</div>
