--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<app-header></app-header>
+<app-header
+  (buttonClicked)="onNavigate($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-shopping-list></app-shopping-list>
-      <app-recipe-list></app-recipe-list>
+      <div class="row" *ngIf="loadedFeature == 'shopping-list'">
+        <app-shopping-list></app-shopping-list>
+      </div>
+      <div class="row" *ngIf="loadedFeature == 'recipe-list'">
+        <app-recipe-list></app-recipe-list>
+      </div>
     </div>
   </div>
 </div>
