add logic to allow selected recipe details to be shown

--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -5,12 +5,14 @@
 </div>
 <hr />
 <div class="row">
-	<div class="col-md-5">
+	<div class="col-md-4">
     <div class="col-xs-12">
-      <app-recipe-item></app-recipe-item>
+      <app-recipe-item
+        (selectedRecipe)="onRecipeSelected($event)"></app-recipe-item>
     </div>
   </div>
-  <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+  <div class="col-md-8" *ngIf="selectedRecipe.length > 0">
+    <app-recipe-detail
+      [selectedRecipe]="selectedRecipe"></app-recipe-detail>
   </div>
 </div>
