--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Name</h1>
+    <h1>{{ selectedRecipe[0].name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <p>Description</p>
+    <p>{{ selectedRecipe[0].description }}</p>
   </div>
 </div>
 <div class="row">
