--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-fluid"/>
+    <img src="{{ selectedRecipe[0].imagePath }}" alt="" class="img-fluid"/>
   </div>
 </div>
 <div class="row">
