--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -11,8 +11,13 @@
         (selectedRecipe)="onRecipeSelected($event)"></app-recipe-item>
     </div>
   </div>
-  <div class="col-md-8" *ngIf="selectedRecipe.length > 0">
+  <div class="col-md-8" *ngIf="selectedRecipe.length > 0; else infoText">
     <app-recipe-detail
       [selectedRecipe]="selectedRecipe"></app-recipe-detail>
   </div>
+  <ng-template #infoText>
+    <div class="col-sm-8">
+      <p>Please select a recipe!</p>
+    </div>
+  </ng-template>
 </div>
