--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -11,8 +11,8 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe</button>
-      <ul class="dropdown-menu">
+      <button type="button" class="btn btn-primary dropdown-toggle" appDropdown>Manage Recipe</button>
+      <ul class="dropdown-menu" style="margin-top: 2em;">
         <li><a hre="#">Add to shopping list</a></li>
         <li><a hre="#">Edit Recipe</a></li>
         <li><a hre="#">Delete Recipe</a></li>
