--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="{{ selectedRecipe[0].imagePath }}" alt="" class="img-fluid"/>
+    <img src="{{ selectedRecipe.imagePath }}" alt="" class="img-fluid"/>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{ selectedRecipe[0].name }}</h1>
+    <h1>{{ selectedRecipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -22,7 +22,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <p>{{ selectedRecipe[0].description }}</p>
+    <p>{{ selectedRecipe.description }}</p>
   </div>
 </div>
 <div class="row">
