--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -7,11 +7,10 @@
 <div class="row">
 	<div class="col-md-4">
     <div class="col-xs-12">
-      <app-recipe-item
-        (selectedRecipe)="onRecipeSelected($event)"></app-recipe-item>
+      <app-recipe-item></app-recipe-item>
     </div>
   </div>
-  <div class="col-md-8" *ngIf="selectedRecipe.length > 0; else infoText">
+  <div class="col-md-8" *ngIf="selectedRecipe; else infoText">
     <app-recipe-detail
       [selectedRecipe]="selectedRecipe"></app-recipe-detail>
   </div>
