--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -27,6 +27,12 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <p>Ingredients</p>
+    <ul class="list-group">
+      <li
+        class="list-group-item"
+        *ngFor="let ingredient of selectedRecipe.ingredients">
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </li>
+    </ul>
   </div>
 </div>
