--- a/src/app/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-list/recipe-detail/recipe-detail.component.html
@@ -13,7 +13,7 @@
     <div class="btn-group">
       <button type="button" class="btn btn-primary dropdown-toggle" appDropdown>Manage Recipe</button>
       <ul class="dropdown-menu" style="margin-top: 2em;">
-        <li><a hre="#">Add to shopping list</a></li>
+        <li><a (click)="onAddToShoppingList()" style="cursor: pointer">Add to shopping list</a></li>
         <li><a hre="#">Edit Recipe</a></li>
         <li><a hre="#">Delete Recipe</a></li>
       </ul>
