--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="row" *ngIf="loadedFeature == 'shopping-list'">
-        <app-shopping-list></app-shopping-list>
-      </div>
-      <div class="row" *ngIf="loadedFeature == 'recipe-list'">
-        <app-recipe-list></app-recipe-list>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
