--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,10 +6,14 @@
     <div class="collapse navbar-collapse d-flex">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+          <a routerLink="/shopping-list"
+             class="nav-link"
+             routerLinkActive="active">Shopping List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onSelect('recipe-list')">Recipe List</a>
+          <a routerLink="/recipes"
+             class="nav-link"
+             routerLinkActive="active">Recipe List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav">
