add child landing component for recipes section

--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -10,13 +10,7 @@
       <app-recipe-item></app-recipe-item>
     </div>
   </div>
-  <div class="col-md-8" *ngIf="selectedRecipe; else infoText">
-    <app-recipe-detail
-      [selectedRecipe]="selectedRecipe"></app-recipe-detail>
+  <div class="col-md-8">
+    <router-outlet></router-outlet>
   </div>
-  <ng-template #infoText>
-    <div class="col-sm-8">
-      <p>Please select a recipe!</p>
-    </div>
-  </ng-template>
 </div>
